--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 alembic==1.13.1
+alembic_utils==0.8.2
 iso3166==2.1.1
-PyMySQL==1.1.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
+defopt==6.4.0
+pydantic==2.5.3
+pandas==2.2.0
+openpyxl==3.1.2
