Tidy up logging and db and add progressbar

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,15 @@ iso3166==2.1.1
 numpy==1.26.3
 openpyxl==3.1.2
 pandas==2.2.0
+progressbar2==4.3.2
 psycopg2-binary==2.9.9
 pyarrow==15.0.0
 pydantic==2.6.0
 pydantic_core==2.16.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
-pytz==2023.4
+python-utils==3.8.2
+pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
