--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,21 @@ click-log==0.4.0
 errorhandler==2.0.1
 et-xmlfile==1.1.0
 iso3166==2.1.1
-numpy==1.26.3
+numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.0
 progressbar2==4.3.2
 psycopg2-binary==2.9.9
 pyarrow==15.0.0
-pydantic==2.6.0
-pydantic_core==2.16.1
+pydantic==2.6.1
+pydantic_core==2.16.2
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-utils==3.8.2
 pytz==2024.1
 six==1.16.0
-SQLAlchemy==2.0.25
+SQLAlchemy==2.0.27
+SQLAlchemy-Continuum==1.4.0
+SQLAlchemy-Utils==0.41.1
 typing_extensions==4.9.0
-tzdata==2023.4
+tzdata==2024.1
