Changed how postgresql is installed in github actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,21 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    # services:
+    #   postgres:
+    #     image: postgres:16
+    #     env:
+    #       POSTGRES_PASSWORD: postgres
+    #     ports:
+    #       - 5432:5432
+    #     options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v4
+      - name: Install PostgreSQL 16
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-16
+          sudo service postgresql start
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -42,4 +47,5 @@ jobs:
           mypy src/gpaslocal
       - name: Tests
         run: |
-          pytest src/gpaslocal --postgresql-host=localhost --postgresql-port=5432 --postgresql-password=postgres
+          # pytest src/gpaslocal --postgresql-host=localhost --postgresql-port=5432 --postgresql-password=postgres
+          pytest src/gpaslocal
