--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     #     options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v4
-      - name: Install PostgreSQL 16
+      - name: Install PostgreSQL
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql
