Change python version in build_release workflow

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -8,15 +8,12 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.11"
     - name: Install Dependencies
       run: |
         pip install pyinstaller
