chamged the code to get the version for the build_release github action

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,15 +19,15 @@ jobs:
         pip install -r src/gpaslocal/requirements.txt
     - name: Extract version from tag
       id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
     - name: Build Executable
-      run: pyinstaller --onefile --name gpaslocal-${{ steps.get_version.outputs.VERSION }}-${{ runner.os }} src/gpaslocal/cli.py
+      run: pyinstaller --onefile --name gpaslocal-${{ env.VERSION }}-${{ runner.os }} src/gpaslocal/cli.py
     - name: Upload Executable to Release
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./dist/gpaslocal-${{ steps.get_version.outputs.VERSION }}-${{ runner.os }}.exe
-        asset_name: gpaslocal-${{ steps.get_version.outputs.VERSION }}-${{ runner.os }}.exe
+        asset_path: ./dist/gpaslocal-${{ env.VERSION }}-${{ runner.os }}.exe
+        asset_name: gpaslocal-${{ env.VERSION }}-${{ runner.os }}.exe
         asset_content_type: application/octet-stream
