--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,9 +19,7 @@ jobs:
         pip install -r src/gpaslocal/requirements.txt
     - name: Extract version from tag
       id: get_version
-      run: echo "VERSION=${{ github.ref }}".replace('refs/tags/', '') >> $GITHUB_ENV
-    - name: Echo Version
-      run: echo ${{ env.VERSION }}
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build Executable
       run: pyinstaller --onefile --name gpaslocal-${{ env.VERSION }}-${{ runner.os }} src/gpaslocal/cli.py
     - name: Upload Executable to Release
@@ -30,6 +28,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./dist/gpaslocal-${{ env.VERSION }}-${{ runner.os }}.exe
-        asset_name: gpaslocal-${{ env.VERSION }}-${{ runner.os }}.exe
+        asset_path: ./dist/gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}.exe
+        asset_name: gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}.exe
         asset_content_type: application/octet-stream
