--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -21,7 +21,7 @@ jobs:
       id: get_version
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build Executable
-      run: pyinstaller --onefile --name gpaslocal-${{ env.VERSION }}-${{ runner.os }} src/gpaslocal/cli.py
+      run: pyinstaller --onefile --name gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }} src/gpaslocal/cli.py
     - name: Upload Executable to Release
       uses: actions/upload-release-asset@v1
       env:
