--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -26,18 +26,25 @@ jobs:
       run: |
         pip install pyinstaller
         pip install -r src/gpaslocal/requirements.txt
+      shell: bash
     - name: Extract version from tag
       id: get_version
-      run: echo "RELEASE_VERSION=$(echo ${{ github.ref }} | Out-String -Stream | %{ $_ -replace 'refs/tags/', '' })" >> $env:GITHUB_ENV
-      shell: pwsh
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      shell: bash
     - name: Build Executable
-      run: pyinstaller --onefile --name gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }} src/gpaslocal/cli.py
+      run: |
+        if [[ "${{ runner.os }}" == "Windows" ]]; then
+          pyinstaller --onefile --name gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}.exe src/gpaslocal/cli.py
+        else
+          pyinstaller --onefile --name gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }} src/gpaslocal/cli.py
+        fi
+      shell: bash
     - name: Upload Executable to Release
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./dist/gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}.exe
-        asset_name: gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}.exe
+        asset_path: ./dist/gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}${{ runner.os == 'Windows' && '.exe' || '' }}
+        asset_name: gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}${{ runner.os == 'Windows' && '.exe' || '' }}
         asset_content_type: application/octet-stream
