--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,11 +9,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest, macos-14]
         include:
-          - os: macos-latest
+          - os: macos-14
             arch: arm64
           - os: macos-latest
+            arch: x64
+          - os: ubuntu-latest
+            arch: x64
+          - os: windows-latest
             arch: x64
     steps:
     - uses: actions/checkout@v4
