--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -28,8 +28,9 @@ jobs:
         architecture: ${{ matrix.arch }}
     - name: Install Dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install pyinstaller
-        pip install -r src/gpaslocal/requirements.txt
+        pip install .
       shell: bash
     - name: Extract version from tag
       id: get_version
