--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/gpaslocal/requirements-dev.txt
+          pip install .[dev]
       - name: Lint
         run: |
           ruff check src/gpaslocal
