--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "SQLAlchemy-Continuum==1.4.0",
     "SQLAlchemy-Utils>=0.41.1",
     "typing_extensions==4.9.0",
+    "pandas-stubs==2.2.0.240218",
+    "types-python-dateutil==2.9.0.20240315"
 ]
 
 [project.scripts]
