--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -53,6 +53,12 @@ jobs:
         asset_path: ./dist/gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}${{ runner.os == 'Windows' && '.exe' || '' }}
         asset_name: gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}${{ runner.os == 'Windows' && '.exe' || '' }}
         asset_content_type: application/octet-stream
+
+  upload_excel:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
     - name: Upload Spreadsheet to Release
       uses: actions/upload-release-asset@v1
       env:
