--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -54,7 +54,7 @@ jobs:
         asset_name: gpaslocal-${{ env.RELEASE_VERSION }}-${{ runner.os }}-${{ matrix.arch }}${{ runner.os == 'Windows' && '.exe' || '' }}
         asset_content_type: application/octet-stream
 
-  upload_excel:
+  upload_support_files:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -68,3 +68,12 @@ jobs:
         asset_path: ExcelSheets/RunSampleImport.xlsm
         asset_name: RunSampleImport.xlsm
         asset_content_type: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+    - name: Upload Env template to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: env.template
+        asset_name: env.template
+        asset_content_type: text/plain
