--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -74,6 +74,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: env.template
-        asset_name: env.template
+        asset_path: env_template
+        asset_name: env_template
         asset_content_type: text/plain
